--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "moment": "^2.20.1",
         "sweetalert": "^2.1.0",
+        "vue-flatpickr-component": "^7.0.0",
         "vue-router": "^3.0.1",
         "vue-select": "^2.4.0"
     }
