--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "devDependencies": {
         "axios": "^0.17",
         "bootstrap": "^4.0.0",
-        "popper.js": "^1.12",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
-        "vue": "^2.5.7"
+        "popper.js": "^1.12",
+        "vue": "^2.5.7",
+        "vue-tippy": "^2.0.8"
     },
     "dependencies": {
         "moment": "^2.20.1",
